--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 body {
   background-color: #fffcfc;
-  margin: 0px;
+  margin: 0;
 
 }
 
@@ -37,14 +37,22 @@ body {
   display: flex;
   justify-content: space-between;
   list-style: none;
-}
+  margin-top: 13px;
+  }
 
 header {
   position: fixed;
   width: 100vw;
   height: 70px;
   background-color: #6c7822;
+  padding-top: 0;
+  padding-bottom: 0;
 
+}
+
+section {
+  padding-top: 0;
+  padding-bottom: 70px;
 }
 
 .wrapper {
@@ -65,7 +73,7 @@ footer {
   height: 100px;
   display: block;
   width: 100%; 
-
+  margin-bottom: -3000px;
 }
 
 .footer_logo {
@@ -76,18 +84,30 @@ footer {
   margin: 30px auto;
 }
 
-main {
-  padding-top: 70px;
-  font-size: 100px;
-  margin-bottom: 5000px;
-  text-align: center;
+#SEARCH {
+  padding-top: 350px;
+  max-width: 1500px;
 }
+
+
+.search_box_shop {
+  margin:  0 auto;
+}
+
+.search_box_title {
+  text-align: left;
+}
+
+.bicycle_img {
+  width: 200px;
+  /* padding: 2px auto; */
+}
+
+
 @media screen and (max-width: 550px) {
   .header_logo {
     margin: 0 0 0 ;
   }
 }
 @media screen and (max-width: 530px) {
-  .header li{
-  }
 }
