--- a/css/custom.css
+++ b/css/custom.css
@@ -85,6 +85,7 @@ footer {
 .search_form {
   margin-left: 11%;
   margin-right: 11%;
+  margin-top: 530px;
   border: black solid 1px;
   padding: 47px;
   border-radius: 35px;
@@ -194,7 +195,6 @@ main {
     margin-right: 20px;
   }
 }
-
 @media (max-width: 406px) {
   .shop_img {
     padding: 10px 5px 2px 5px;
@@ -220,4 +220,48 @@ main {
   .search_results_list {
     margin: 0 11%;
   }
+}
+
+body {
+  position: relative;
+}
+
+.first_view_img img{
+  position: absolute;
+  width: 700px;
+  top: 120px;
+  left: 42%;
+  z-index: 100;
+}
+
+.catch_copy {
+  position: absolute;
+  background-color: #e1e8c3;
+  width: 550px;
+  top: 170px;
+  left: 73px;
+  color: #4a4b46;
+  z-index: 200;
+}
+
+.catch_copy h1 {
+  font-size: 35px;
+  font-weight: bold;
+  padding: 35px 0px 0px 50px;
+  line-height: 1.6;
+}
+
+.catch_copy p {
+  font-size: 14px;
+  padding: 0px 0px 35px 50px;
+  line-height: 1.8;
+}
+
+.first_view_orange {
+  position: absolute;
+  background-color: #E3925F;
+  width: 80%;
+  height: 372px;
+  top: 258px;
+  z-index: 50;
 }
