--- a/css/custom.css
+++ b/css/custom.css
@@ -186,45 +186,51 @@ main {
 }
 
 
-/* ///////// ここからファーストビュー /////////
-.first_view_img img{
-  width: 600px;
-  z-index: 100;
-  position: absolute;
-  top: 120px;
-  left: 42%;
-
-}
+/* ///////// ここからファーストビュー ///////// */
 
 .first_view_img {
-  width: calc(100% - 500px);
+  margin-top: 30px;
+  margin-left: -100px;
+  margin-right: 30px;
   z-index: 100;
+  width: 1080px; /*要素の幅指定*/
+  height: 390px;
 }
 
-.catch_copy {
+.first_view_img img {
+  width: 100%;
+}
+
+
+.catch_copy  {
   background-color: #e1e8c3;
-  width: calc(100% - 300px);
-  height: 315px;
+  width: calc(100% - 650px);
+  height: 385px;
   color: #4a4b46;
   z-index: 200;
-  margin-top: 70px;
-  position: absolute;
+  margin-top: 110px;
+  margin-left: 30px;
 }
 
 .catch_copy h1 {
-  font-size: 35px;
+  font-size: 46px;
   font-weight: bold;
-  padding: 35px 0px 0px 50px;
+  padding-top: 35px;
   line-height: 1.6;
 }
 
 .catch_copy p {
-  font-size: 14px;
-  padding: 0px 0px 35px 50px;
+  font-size: 18px;
+  padding-bottom: 35px;
   line-height: 1.8;
 }
 
-.first_view_orange {
+.first_view_txt {
+  width: calc(100% - 60px);
+  padding-left: 450px;
+}
+
+/* .first_view_orange {
   width: calc(100% - 150px);
 
   background-color: #E3925F;
@@ -232,14 +238,85 @@ main {
   height: 350px;
   z-index: 50;
   margin-top: 80px;
-} 
+}  */
 
 .first_view {
   padding-top: 70px;
+  display: flex;
 }
-///////// ここまでファーストビュー ///////// */
+/* ///////// ここまでファーストビュー ///////// */
 
+@media (min-width: 2500px) {
+  .search_results_list {
+    margin: 0 11%;
+  }
+}
+/* @media (max-width: 1230px) {
+  .catch_copy {
+    height: 317px;
+    width: 480px;
+  }
 
+  .catch_copy  h1{
+    font-size: 36px;
+    padding-left: 50px;
+  }
+  
+  .catch_copy p {
+    font-size: 14px;
+    padding-left: 50px;
+  }
+}
+
+@media (max-width: 895px) {
+  .catch_copy {
+    height: 280px;
+    width: 650px;
+  }
+
+  .catch_copy  h1{
+    font-size: 32px;
+  }
+  
+  .catch_copy p {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 645px) {
+  .catch_copy {
+    height: 260px;
+    width: 800px;
+  }
+
+  .catch_copy  h1{
+    font-size: 28px;
+    padding-left: 30px;
+  }
+  
+  .catch_copy p {
+    padding-left: 30px;
+
+  }
+}
+
+@media (max-width: 556px) {
+  .catch_copy {
+    height: 260px;
+    width: 800px;
+  }
+
+  .catch_copy  h1{
+    font-size: 28px;
+    padding-left: 30px;
+  }
+  
+  .catch_copy p {
+    padding-left: 30px;
+
+  }
+}
+ */
 @media (max-width: 530px) {
   header {
     height: 50px;
@@ -314,11 +391,6 @@ main {
   }
 }
 
-@media (min-width: 2500px) {
-  .search_results_list {
-    margin: 0 11%;
-  }
-}
 
 
 /* ///////// ここからswiper ///////// */
