--- a/css/custom.css
+++ b/css/custom.css
@@ -181,8 +181,13 @@ main {
   width: 80%; /* 画像の幅をカードの80%に設定 */
 }
 
+.card-title {
+  font-size: 18px;
+}
+
 .card-text {
   margin-left: 10%;
+  font-size: 16px;
 }
 
 
@@ -299,6 +304,7 @@ main {
   .first_view_orange {
     height: 356px;
     margin-top: -290px;
+    margin-bottom: 50px;
   } 
 
 }
@@ -380,7 +386,6 @@ main {
   .first_view_orange {
     height: 290px;
     margin-top: -300px;
-    width: 100%;
 }
 
 }
@@ -410,31 +415,55 @@ main {
 
 @media (max-width: 518px) {
   .catch_copy {
+    margin-top: 306px;
     width: 2500px;
-  }
-}
-
-@media (max-width: 518px) {
-  .catch_copy {
-    margin-top: 250px;
+    height: 240px;
+    margin-left: 0;
   }
 
   .catch_copy  h1{
     font-size: 24px;
-    padding-left: 15px;
+    padding-left: 46px;
   }
   
   .catch_copy p {
-    padding-left: 15px;
+    padding-left: 46px;
     font-size: 10px;
   }
   
-.first_view_img img {
-  width: 240%;
+  
+  .first_view_img {
+    margin-right: 0;
+  }
+
+  .first_view_img img {
+    width: 240%;
+  }
+
+  .first_view_orange {
+    margin-top: -456px;
+    height: 320px;
+  }
 }
 
+@media (max-width: 481px) {
+  .catch_copy {
+    margin-top: 277px;
+  }
 }
-  @media (max-width: 432px) {
+
+@media (max-width: 432px) {
+  .catch_copy {
+    margin-top: 260px;
+  }
+
+  .catch_copy h1 {
+    padding-left: 20px;
+  }
+  .catch_copy p {
+    padding-left: 20px;
+  }
+
   .shop_img {
     padding: 0px 5px 2px 5px;
     width: 150px;
@@ -461,6 +490,10 @@ main {
 
 
 @media (max-width: 406px) {
+  .catch_copy {
+    margin-top: 227px;
+  }
+  
   .shop_img {
     padding: 0px 5px 2px 5px;
     width: 150px;
@@ -484,18 +517,16 @@ main {
     margin: 0px 0%;
   }
 
-  .catch_copy {
-    margin-left: 3%;
-    height: 240px;
-    margin-top: 228px;
-  }
-  .first_view_img img {
-    width: 250%;
-  }
-  .first_view_img {
-    margin-right: 3%;
+  .search_form {
+    margin-left: 20px;
+    margin-right: 20px;
+    padding: 22px;
   }
 
+  .search_results_card {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
 
 /* ######## serch_detail.html ####### */
